--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
   "name": "cryptoapp",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
+    "@reduxjs/toolkit": "^2.6.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.24.3",
+    "axios": "^1.8.3",
+    "chart.js": "^4.4.8",
+    "chartjs-adapter-moment": "^1.0.1",
+    "html-react-parser": "^5.2.2",
+    "millify": "^6.1.0",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
